[gd_scene load_steps=6 format=3 uid="uid://cm0i426w8lfng"]

[ext_resource type="Script" uid="uid://jofo1tw6t52q" path="res://scenes/ui/load_screen.gd" id="1_lk34y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
content_margin_left = 32.0
content_margin_top = 28.0
content_margin_right = 32.0
content_margin_bottom = 28.0
bg_color = Color(0.101961, 0.0980392, 0.196078, 0.94)
border_color = Color(0, 0.803922, 0.976471, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(0.976471, 0.901961, 0.811765, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fill"]
bg_color = Color(1, 0.635294, 0.0784314, 1)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fact"]
content_margin_left = 24.0
content_margin_top = 18.0
content_margin_right = 24.0
content_margin_bottom = 18.0
bg_color = Color(0.231373, 0.0784314, 0.262745, 0.95)
corner_radius_top_left = 18
corner_radius_top_right = 18
corner_radius_bottom_right = 18
corner_radius_bottom_left = 18

[node name="LoadScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lk34y")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0117647, 0.0980392, 0.247059, 1)

[node name="Stars" type="ColorRect" parent="Background"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.0470588, 0.180392, 0.266667, 0.6)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 24

[node name="TitleLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Priming the Digi-Habitat"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 24
text = "Syncing creature vitals ü©∫"
horizontal_alignment = 1

[node name="ProgressVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="ProgressBar" type="ProgressBar" parent="CenterContainer/PanelContainer/VBoxContainer/ProgressVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(560, 32)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/fill = SubResource("StyleBoxFlat_fill")
rounded = true

[node name="ProgressLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/ProgressVBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "00%  ü•ö ‚ñ´Ô∏è ‚ñ´Ô∏è ‚ñ´Ô∏è ‚ñ´Ô∏è ‚ñ´Ô∏è"
horizontal_alignment = 1

[node name="QuickFactsPanel" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_fact")

[node name="QuickFactsVBox" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/QuickFactsPanel"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="QuickFactsTitle" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/QuickFactsPanel/QuickFactsVBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "Quick Fact"

[node name="QuickFactLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/QuickFactsPanel/QuickFactsVBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(512, 55)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 18
text = "Tips about keeping your creatures happy will rotate here while you wait."
autowrap_mode = 3

[node name="ContinueButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 22
text = "Enter Habitat"

[node name="QuickFactTimer" type="Timer" parent="."]
unique_name_in_owner = true

[node name="IndicatorTimer" type="Timer" parent="."]
unique_name_in_owner = true
